--- a/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
+++ b/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
@@ -1,2 +1,2 @@
-<button mat-raised-button (click)="GetDeviceInfo()">Device Info</button>
+<button mat-raised-button (click)="Beep()">Device Info</button>
 
