added reset and manual transaction logic

--- a/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
+++ b/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
@@ -1,2 +1,4 @@
-<button mat-raised-button (click)="Beep()">Device Info</button>
-
+<button mat-raised-button (click)="Beep()">Beep</button>
+<button mat-raised-button (click)="GetDirectoryListings()">Get Directory Listings</button>
+<button mat-raised-button (click)="Reset()">Reset</button>
+<button mat-raised-button (click)="Transaction()">Transaction</button>
