--- a/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
+++ b/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
@@ -1,8 +1,9 @@
 <div class="button-container">
-  <button mat-raised-button (click)="Beep()">Beep</button>
+  <button mat-raised-button (click)="BeepJs()">Beep</button>
   <button mat-raised-button (click)="GetDirectoryListings()">Get Directory Listings</button>
-  <button mat-raised-button (click)="Reset()">Reset</button>
-  <button mat-raised-button (click)="Transaction()">Transaction</button>
+  <button mat-raised-button (click)="ResetJs()">Reset</button>
+  <button mat-raised-button (click)="ManualTransactionJs()">ManualTransaction</button>
+  <button mat-raised-button (click)="ClearAll()">Clear All</button>
 </div>
 <div>
   <label>Rich Text Box</label>
