added manual transaction

--- a/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
+++ b/WebSocketSampleApp/src/app/device-manager/device-manager.component.html
@@ -3,6 +3,7 @@
   <button mat-raised-button (click)="Reset()">Reset</button>
   <button mat-raised-button (click)="ManualTransaction()">ManualTransaction</button>
   <button mat-raised-button (click)="Swipe()">Swipe</button>
+  <button mat-raised-button (click)="DisplayForm('LAF_Welcome.k3z')">Display Form</button>
   <button mat-raised-button (click)="ClearAll()">Clear All</button>
 </div>
 <div>
